<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">SnowIt</string>

    <string name="dummy_section_text">Секция %1d просто заглушка.</string>

    <string name="demo_external_activity">Демо внешний activity</string>
    <string name="demo_collection">Погода в Буковеле</string>
    <string name="bukovel_map">Карта трасс</string>
    <string name="menu_settings">Настройки</string>
    <string name="attention_message">Разверните экран чтобы сделать карту больше!</string>
    <string name="gui_section">Секция</string>
    <string name="station_name">Метеостанция: </string>
    <string name="latitude_val">Широта: </string>
    <string name="longitude_val">Долгота: </string>
    <string name="weather_data">Погода: </string>
    <string name="temperature_data">Температура: </string>
    <string name="datetime_data">Погода на: </string>
    <string name="calling_webservice">Соединение с сервером...</string>
    <string name="loading">Загружаем...</string>
    <string name="section1">Меню</string>
    <string name="section2">Карта</string>
</resources>
