<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2006 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?android:attr/listPreferredItemHeight"
    >

    <TextView android:id="@+id/station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?android:attr/listPreferredItemPaddingStart"
        android:text="@string/station_name"
        android:layout_marginTop="8dip"/>
        <!-- android:textAppearance="?android:attr/textAppearanceListItem" -->

    <TextView android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/station"
        android:layout_alignStart="@id/station"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/latitude_val"
        android:singleLine="true"
        />

    <TextView android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitude"
        android:layout_alignStart="@id/station"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/longitude_val"
        android:singleLine="true"
        />

    <TextView android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/longitude"
        android:layout_alignStart="@id/station"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/weather_data"
        />

    <TextView
        android:id="@+id/datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datetime_data"
        android:layout_below="@+id/weather"
        android:layout_alignLeft="@+id/weather"
        android:layout_alignStart="@id/station" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature_data"
        android:layout_below="@+id/datetime"
        android:layout_alignLeft="@+id/datetime"
        android:layout_alignStart="@id/station" />

</RelativeLayout>


